--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,7 +14,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: action/Checkout@v4
+        uses: actions/Checkout@v4
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
