--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,18 +5,17 @@ on: [push]
 
 jobs:
   test-lint:
-    name: Test and Lint 
+    name: Test and Lint
     runs-on: ubuntu-24.04
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
           username: ${{ secrets.DOCKERHUB_USER }}
-          
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: actions/Checkout@v4
+        uses: actions/checkout@v4
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker compose run --rm app sh -c "flake8"
